# locator

HealthcareLocator/: README.md  auth.py  check_environment.sh  database.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py
HealthcareLocator/attached_assets/: Pasted--Patient-Portal-Login-Register-Login-Email-orudigital-gmail-com-Password-sqlalche-1737841915932.txt
HealthcareLocator/pages/: patient_auth.py  patient_dashboard.py
